--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 @use "../components" as *;
 @use "../abstracts" as *;
 
-.newslette-siteMap-container {
+.newsletter-siteMap-container {
   --gap: 0;
 
   @include respond(tablet) {
@@ -10,6 +10,7 @@
 
       form {
         flex-direction: row;
+        --gap: 1rem;
       }
     }
   }
